tests/programs/symex/a5-test-cases/pass/symex_tuple_pass.rice
// symex
#[symex]
fn example(x: (int, int)) {
  let t = (x.0 + x.1, x.0 - x.1) in
  if x.0 < x.1 {
    assert(t.0 > t.1)
  }
}