tests/programs/symex/a5-test-cases/fail/symex_vars_fail.rice
// symex
#[symex]
fn example(x: int) {
  let y = x + 1 in
  x := y * 2;
  assert(x > 0)
}